--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://omochizo.netlify.app/"
+baseURL = "https://www.omochizo.netlify.app/"
 languageCode = "ja"
 title = "パケット畑でつかまえて"
 theme = "m10c"
